# Waveform-Generator

./: .gitignore  README.md
c/pico/: CMakeLists.txt  main.c
vhdl/src/: spi_master.vhd
